# arcanaeum

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  build.ps1  extract.py  index.ts  package.json  release.ps1  test.ess  test.skse
.github/workflows/: release.yml  rust.yml
data/: data.csv
src/: app.rs  config.rs  main.rs
src/components/: character_selector.rs  detail_view.rs  mod.rs  save_file_selector.rs  selectable_file_item.rs
src/features/: mod.rs
src/features/fixes/resolution/: README.md  mod.rs
src/features/skse/: mod.rs
src/mod_search/: mod.rs  vortex_scanner.rs
src/parser/: header.rs  mod.rs  plugin_info.rs  utils.rs
src/save_file_parser/: mod.rs  plugin_info.rs
src/sktypes/: info_item.rs  mod.rs  plugin_info.rs  skchar13.rs  skui_value.rs  skuint32.rs  skwstringarray.rs  types.rs  wstring.rs
src/utils/: mod.rs
src/utils/skyrim_se/: mod.rs
src/utils/steam/: mod.rs
