[package]
name = "skyrim-saves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
rfd = "0.6.3"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
eframe = "0.16"
skyrim_savegame = { git = "https://github.com/divanvisagie/skyrim_savegame" }
urlencoding = "2.1.0"
rmp = "0.8.10"
webbrowser = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
serde_yaml = "0.8.23"
futures = "0.3.19"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lz4_flex = "0.9.2"
